First file in feature v1.0.1

--- a/MyPage.html
+++ b/MyPage.html
@@ -6,12 +6,8 @@
 	</head>
 	<body>
 		<h1>Hello And Welcome To My First Website!!</h1>
-		<ul>
-			<li>First</li>
-			<li>Second</li>
-		</ul>
-		<ol><li>First</li>
-			<li>Second</li>
+		<ol><li>This is my first website so dont judge for its bad evironment</li>
+			<li>Support me in my work and motivate me</li>
 		</ol>
 		<img src="258.jpg" width="75%" >
 		<table>
