--- a/MyPage.html
+++ b/MyPage.html
@@ -9,7 +9,7 @@
 		<ol><li>This is my first website so dont judge for its bad evironment</li>
 			<li>Support me in my work and motivate me</li>
 		</ol>
-		<img src="258.jpg" width="75%" >
+		<img src="Img.jpg" width="75%" >
 		<table>
 			<tr>
 				<th>Name</th>
