--- a/MyPage.html
+++ b/MyPage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> My WebPage </title>
-		<link rel="stylesheet" href="h1.css">	
+		<link rel="stylesheet" href="c.css">	
 	</head>
 	<body>
 		<h1>Hello And Welcome To My First Website!!</h1>
