--- a/MyPage.html
+++ b/MyPage.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Hello And Welcome To My First Website!!</h1>
 		<ol>
-			<li>This is my first website so dont judge for its bad evironment</li>
+			<li>This is my first website so dont judge for its average ambience</li>
 			<li>Support me in my work and motivate me</li>
 		</ol>
 		<img src="Img.jpg" width="75%" >
